js/src/tests/test262/built-ins/Error/prototype/toString/tostring-message-throws-symbol.js





















assert.throws(TypeError, function () {
    Error.prototype.toString.call({message : Symbol()})
}, "If message field is a symbol, Error.prototype.toString must throw a TypeError")

reportCompare(0, 0);
